--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,193 @@
-#kocak{
-  background-image: url('/image/logonexus.png');
+#bgheaderone-1{
+  background-image: url('/image/bgheaderone-1.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#bgheaderone-2{
+  background-image: url('/image/bgheaderone-2.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#bgheaderone-3{
+  background-image: url('/image/bgheaderone-3.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#benner1{
+  background-image: url('/image/benner1.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; 
+}
+
+
+#posts1 {
+   background-image: url('/image/market.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+
+#posts2 {
+   background-image: url('/image/posts1.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+#posts3 {
+   background-image: url('/image/posts2.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#posts4 {
+  background-image: url('/image/market2.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#posts5 {
+  background-image: url('/image/posts3.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#tranding1{
+  background-image: url('/image/post5.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#tranding2{
+  background-image: url('/image/posts6.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#trandingpost1{
+  background-image: url('/image/posts1.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  
+}
+
+
+
+#trandingpost2{
+  background-image: url('/image/market.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  
+}
+
+#trandingpost3{
+   background-image: url('/image/posts3.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  
+}
+
+
+#bennerimg2{
+   background-image: url('/image/post5.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+#benner3 {
+   background-image: url('/image/benner2.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+
+#mining1{
+   background-image: url('/image/market2.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+
+#mining2{
+   background-image: url('/image/post5.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+
+#mining3{
+   background-image: url('/image/posts1.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+
+#mining4{
+   background-image: url('/image/posts2.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+
+#mining5{
+   background-image: url('/image/market.jpeg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+}
+
+#mining6{
+   background-image: url('/image/posts6.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
 }
