--- a/app/style.css
+++ b/app/style.css
@@ -177,6 +177,35 @@
   background-position: center;
 }
 
+#bgheaderhealthy3{
+  background-image: url('/image/newstraveling2.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#bgheaderhealthy4{
+  background-image: url('/healthy/header4.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+
+#bgheaderhealthy5{
+  background-image: url('/healthy/newshealthy5.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
 #mining5{
    background-image: url('/image/market.jpeg');
@@ -190,4 +219,108 @@
    /* Replace with your image path */
   background-size: cover;
   background-position: center;
+}
+
+
+#headerteknologi1{
+   background-image: url('/teknologi/header1.jpg');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#headerteknologi2{
+   background-image: url('/teknologi/header2.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+
+#team1{
+   background-image: url('/team/team1.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#team2{
+   background-image: url('/team/team2.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#team3{
+   background-image: url('/team/team3.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+
+#team4{
+   background-image: url('/team/team4.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#team5{
+   background-image: url('/team/team5.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+#team6{
+   background-image: url('/team/team6.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+
+#team7{
+   background-image: url('/team/team7.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+
+
+#team8{
+   background-image: url('/team/team8.png');
+   /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+   background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.4);
 }
