--- a/app/style.css
+++ b/app/style.css
@@ -178,7 +178,7 @@
 }
 
 #bgheaderhealthy3{
-  background-image: url('/image/newstraveling2.png');
+  background-image: url('/image/travelimg2.png');
    /* Replace with your image path */
   background-size: cover;
   background-position: center;
